--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -69,6 +69,16 @@
             <a href="BOOTSTRAP/barreProgression.html">Barre de progression</a>
         </div>
     </div>  
+    <div class="dropdown">
+        <button class="dropbtn">Aides
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+            <a href="AIDES/aide_git.html">Git/GitHub</a>
+            
+        </div>
+    </div>  
+    
     <div class="dropdown">
         <button class="dropbtn">Tests
             <i class="fa fa-caret-down"></i>
