--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </button>
         <div class="dropdown-content">
             <a href="AIDES/aide_git.html">Git/GitHub</a>
-            
+            <a href="AIDES/bluemix.html">Bluemix</a>
         </div>
     </div>  
     
